.. $Id: RELEASE_NOTES  79391 2011-10-10 olivas $
.. $Author: olivas $
.. $Date: 2011-10-10 $

Release Notes
=============

trunk
-----

June 20, 2018 Juan Carlos Diaz-Velez (juancarlos@icecube.wisc.edu)
-------------------------------------------------------------------
V01-08-01 - Incremental release

  r161706 - Merged branches/streaming-hit-merging
  r160494 -pybindings for I3CrossSection and add more rigorous kinematic constraints to avoid physically impossible states, avoid neglecting particle masses in more places.
  r159957 - Use a more numerically stable calculation of s. 
  r159909 - Improve DIS final state sampling Get calculation details from spline file


Nov 2, 2017 Juan Carlos Diaz-Velez (juancarlos@icecube.wisc.edu)
-------------------------------------------------------------------
V01-08-00 - Incremental release

* (Kotoyo) Modified pure virtual function I3PropergatorService::Propagate
  Now the Propagate function takes third argument I3FrameConstPtr,
  in order to make I3NeutrinoPropagator work properly.

August 22, 2017 Juan Carlos Diaz-Velez (juancarlos@icecube.wisc.edu)
-------------------------------------------------------------------
V01-07-01 - Incremental release

March 24, 2017 Juan Carlos Diaz-Velez (juancarlos@icecube.wisc.edu)
-------------------------------------------------------------------

V01-07-00 - Incremental release

* Added I3PrimaryPulseMapper from sim-services to generate an I3ParticleIDMap that associates MCPulses with
  the primary of the particle that produced them. PMTResponseSimulator adds an I3ParticleIDMap that maps pulses with
  the particle that produced them but often these secondary particles are not saved in order to save space on disc.

April 8, 2016 Alex Olivas (olivas@icecube.umd.edu)
--------------------------------------------------

V01-06-00 - Bugfix release

* Moved I3MCPEConverters here.  It wasn't used anywhere, but we'll keep it around